--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-  <!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-<meta http-equiv = "refresh" content = "0:; url = https://helicanexplanations.netlify.app/" />
-
-</head>
-
-<body>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://helicanexplanations.netlify.app/">
+        <script type="text/javascript">
+            window.location.href = "https://helicanexplanations.netlify.app/"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://helicanexplanations.netlify.app/'>link to website</a>.
+    </body>
 </html>
